old/old/kubernetes/ca-raddest-gifts/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gifts
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - gifts.raddest.ca
      secretName: gifts-raddest-tls
  rules:
    - host: gifts.raddest.ca
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: gifts-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gifts-frontend
                port:
                  number: 80
